# mnemon

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DELETION_LOG.md  DIOXUS.md  Dioxus.toml  GUIDELINES.md  LIVING_PLAN.md  NO_AGENT_HERE_ONLY_G_AND_V.md  PROJECT.md  README.md  TECHNOLOGIES.md  WIREFRAMES.md  package-lock.json  tailwind.config.js  tailwind.css
.claude/agents/: refactor-cleaner.md
.claude/rules/: agents.md  coding-style.md
.claude/skills/: coding-standards.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  deploy.yml
assets/: main.css  tailwind.css
src/: app_state.rs  constants.rs  forms.rs  main.rs  types.rs  utils.rs
src/components/: add_mnemon.rs  carousel.rs  details.rs  edit_mnemon.rs  empty_state.rs  form_inputs.rs  hero.rs  mod.rs  settings.rs  undo_toast.rs
src/data/: fixtures.rs  mod.rs
src/hooks/: mod.rs  touch_gesture.rs
src/models/: mnemon.rs  mod.rs  provider.rs  search.rs  work.rs
src/providers/: mod.rs  rawg.rs  tmdb.rs
src/settings/: mod.rs
src/storage/: mod.rs
src/utils/: gestures.rs
