[package]
name = "temp"
version = "0.1.0"
authors = ["Vittorio Guerriero <vittorio.gue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rand = "0.8"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
