[package]
name = "mnemon"
version = "0.1.0"
authors = ["Vittorio Guerriero <vittorio.gue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
rand = "0.8"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
rexie = "0.6"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "DomRect", "Window", "Document", "Storage", "Navigator", "Touch", "TouchList", "TouchEvent"] }
urlencoding = "2.1"

[features]
default = ["web"]
web = ["dioxus/web"]
web-fullstack = ["dioxus/web", "dioxus/fullstack"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
